--- a/OneTeamAptitudeMVC/OneTeamAptitudeMVC/OneTeamAptitudeMVC/Views/SalesAPI/InsertSales.cshtml
+++ b/OneTeamAptitudeMVC/OneTeamAptitudeMVC/OneTeamAptitudeMVC/Views/SalesAPI/InsertSales.cshtml
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                @Html.Label("ProductId :")
+                                @Html.Label("Product :")
                                 <div class="input-group">
                                     <div class="input-group-addon">
                                         <i class="fa fa-user"></i>
@@ -24,6 +24,39 @@
 
                                 </div>
                                 @Html.ValidationMessageFor(p => p.ProductId, "", new { @class = "text-danger", @required = "", })
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Label("Category :")
+                                <div class="input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-user"></i>
+                                    </div>
+
+
+                                    @Html.DropDownListFor(p => p.CategoryId, new SelectList(ViewBag.CategoryList, "Id", "CategoryName"), new { @class = "form-control input-lg" })
+
+                                </div>
+                                @Html.ValidationMessageFor(p => p.CategoryId, "", new { @class = "text-danger", @required = "", })
+                            </div>
+                        </div>
+
+
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Label("SubCategory :")
+                                <div class="input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-user"></i>
+                                    </div>
+
+
+                                    @Html.DropDownListFor(p => p.SubCategoryId, new SelectList(ViewBag.SubCategoryList, "Id", "SubCategoryName"), new { @class = "form-control input-lg" })
+
+                                </div>
+                                @Html.ValidationMessageFor(p => p.SubCategoryId, "", new { @class = "text-danger", @required = "", })
                             </div>
                         </div>
 
@@ -101,6 +134,7 @@
         $("#ProductId").change(function () {
             
             $.ajax({
+               
                 async: true,
                 type: "GET",
                 url: "/SalesAPI/InsertProductAjax?Id=" + $("#ProductId").val(),
@@ -111,7 +145,11 @@
                     console.log(Response)
                    
                     var Price = Response.Price;
+                    var CategoryId = Response.CategoryId;
+                    var SubCategoryId = Response.SubCategoryId;
+                    $("#CategoryId").val(CategoryId)
                     $("#Price").val(Price);
+                    $("#SubCategoryId").val(SubCategoryId)
                 //    console.log(Response)
 
                 },
@@ -120,6 +158,7 @@
 
 
             });
+
 
         });
     </script>
