Database working clearly

--- a/InventoryAPI/Views/Product/SalesHomeMain.cshtml
+++ b/InventoryAPI/Views/Product/SalesHomeMain.cshtml
@@ -55,8 +55,7 @@
             <tr>
                 <th>Invoice no</th>
                 <th>ProductName</th>
-                <th>CategoryName</th>
-                <th>SubCategoryName</th>
+                
 
                 <th>SalesQTY</th>
 
@@ -84,12 +83,7 @@
                     <td>
                         @item.ProductName
                     </td>
-                    <td>
-                        @item.CategoryName
-                    </td>
-                    <td>
-                        @item.SubCategoryName
-                    </td>
+                    
 
                     <td>
                         @item.SalesQTY
@@ -98,9 +92,11 @@
                     <td>
                         @item.Price
                     </td>
+
                     <td>
-                        @item.SalesDate
+                        @item.PurchaseDate
                     </td>
+                   
                     <td>
                         @item.TotalPrice
                     </td>
